# open-jarvis

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jarvis.md  LICENSE  Makefile  README.md  SECURITY.md  USERS.md  docker-compose.yml  index.html  mkdocs.yml  pnpm-workspace.yaml  robots.txt  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/wiki-seed/: Home-EN.md  Home.md  README.md
.github/workflows/: branch-naming.yml  ci.yml  deploy-docs.yml  deploy.yml
agents/: README.md  index.html
agents/desktop/: README.md  package.json
agents/desktop/src-tauri/: Cargo.toml  tauri.conf.json
agents/desktop/src-tauri/capabilities/: main.json
agents/desktop/src-tauri/src/: lib.rs  main.rs
agents/mobile/: .gitignore  README.md  angular.json  capacitor.config.json  package.json  tsconfig.json
architecture/: index.html
communication/cross-device/: index.html
communication/protocols/: index.html
contributing/: index.html
contributing/branching-strategy/: index.html
contributing/code-review/: index.html
contributing/governance/: index.html
contributing/quality-standards/: index.html
contributing/release-cycle/: index.html
design/mobile-accessibility/: index.html
devices/: index.html
docs/: requirements.txt
docs/en/: index.md  status.md
docs/en/agents/: index.md
docs/it/: index.md  status.md
en/: index.html
en/agents/: index.html
en/architecture/: index.html
en/contributing/: index.html
en/devices/: index.html
en/getting-started/: index.html
en/status/: index.html
en/testing/: index.html
en/use-cases/: index.html
en/user-manual/: index.html
enterprise/architecture/: index.html
features/developer/: index.html
features/finance/: index.html
features/health/: index.html
features/maker/: index.html
features/news/: index.html
features/rag/: index.html
frontend/: README.md
frontend/web/: .gitignore  README.md  angular.json  ngsw-config.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
getting-started/: index.html
infra/: README.md
infra/profiles/: README.md
integrations/catalog/: index.html
integrations/holographic/: index.html
integrations/mobile/: index.html
integrations/other-systems/: index.html
legal/license-rationale/: index.html
legal/public-customizations/: index.html
legal/users-registry/: index.html
overrides/: main.html
overrides/partials/: copyright.html
plugins/: README.md
roadmap/phases/: index.html
roadmap/timeline/: index.html
roadmap/vision/: index.html
scripts/: README.md  check-branch-name.sh  sizing.py
search/: search_index.json
security/architecture/: index.html
security/web-auth/: index.html
server/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/jarvis_server/: __init__.py  cli.py
server/jarvis_server/api/: __init__.py  app.py  deps.py  main.py
server/jarvis_server/api/routes/: auth.py  chat.py  health.py  llm.py  memory.py  pairing.py
server/jarvis_server/config/: __init__.py  settings.py
server/jarvis_server/db/: __init__.py  base.py
server/jarvis_server/domain/: __init__.py  chat.py
server/jarvis_server/identity/: __init__.py  enums.py  mfa.py  orm.py  pairing.py  passwords.py  schemas.py  service.py  tokens.py
server/jarvis_server/llm/: __init__.py  adapter.py  policy.py  router.py
server/jarvis_server/llm/adapters/: __init__.py  anthropic.py  echo.py  ollama.py  openai.py
server/jarvis_server/memory/: __init__.py  embeddings.py  orm.py  schemas.py  service.py  vectorstore.py
server/jarvis_server/orchestration/: __init__.py  graph.py  tools.py
server/jarvis_server/security/: __init__.py  keys.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 2026_05_09_0001_identity_schema.py  2026_05_10_0002_memory_schema.py  2026_05_10_0003_pairing_codes.py
server/tests/: conftest.py
server/tests/identity/: conftest.py  test_mfa.py  test_passwords.py  test_service.py  test_tokens.py
server/tests/integration/: test_auth_endpoints.py  test_chat_endpoint.py  test_health_endpoint.py  test_llm_endpoints.py  test_memory_endpoints.py  test_pairing_endpoints.py
server/tests/llm/: test_anthropic_adapter.py  test_echo_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_router.py
server/tests/memory/: conftest.py  test_embeddings.py  test_service.py  test_vectorstore.py
server/tests/orchestration/: conftest.py  test_graph.py  test_tools.py
server/tests/unit/: test_chat_domain.py  test_cli.py  test_settings.py
status/: index.html
testing/: index.html
tests/: README.md
use-cases/: index.html
user-manual/: index.html
user-manual/configuration/: index.html
user-manual/faq/: index.html
(+234 files in other folders)
