[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-server"
version = "0.1.0"
description = "Open-Jarvis core server — orchestration, memory, identity, routing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Federico Calò", email = "noreply@federicocalo.dev" },
]
keywords = ["ai", "personal-ai", "self-hosted", "jarvis", "open-source", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic[email]>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "orjson>=3.10.0",
  # Identity layer (M1.1)
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13.3",
  "psycopg[binary,pool]>=3.2.3",
  "argon2-cffi>=23.1.0",
  "python-jose[cryptography]>=3.3.0",
  "pyotp>=2.9.0",
  "qrcode[pil]>=8.0",
  "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.1",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "types-pyyaml",
  "types-python-jose>=3.3.4.20240106",
  "freezegun>=1.5.1",
  "aiosqlite>=0.20.0",  # SQLite async driver for fast unit tests
  "anyio>=4.6.0",
]

[project.urls]
Homepage = "https://fedcal.github.io/open-jarvis/"
Documentation = "https://fedcal.github.io/open-jarvis/"
Repository = "https://github.com/fedcal/open-jarvis"
Issues = "https://github.com/fedcal/open-jarvis/issues"

[project.scripts]
jarvis = "jarvis_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jarvis_server"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "N",   # pep8-naming
  "RUF", # ruff-specific rules
  "ASYNC",
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # asserts ok in tests, hardcoded fake passwords ok

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=jarvis_server",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
]
markers = [
  "unit: unit tests (fast, isolated)",
  "integration: integration tests (DB, network)",
  "slow: slow tests (>1s)",
]

# ---------- Coverage ----------
[tool.coverage.run]
branch = true
source = ["jarvis_server"]
omit = [
  "*/tests/*",
  "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]
show_missing = true
skip_covered = false
