[package]
name = "open-jarvis-desktop"
version = "0.1.0"
description = "Open-Jarvis desktop client"
authors = ["Federico Calò"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/fedcal/open-jarvis"
edition = "2021"
rust-version = "1.77"

[lib]
name = "open_jarvis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
